syntax = "proto3";

package user;

option go_package = "github.com/marcelofabianov/pejota/internal/user/adapter/gprc/generated";

import "google/protobuf/timestamp.proto";

service UserService {
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
}

message GetUserRequest {
  string public_id = 1;
}

message GetUserResponse {
  string public_id = 1;
  string name = 2;
  string email = 3;
  string role = 4;
  bool login_enabled = 5;
  google.protobuf.Timestamp created_at = 6;
  google.protobuf.Timestamp updated_at = 7;
}

message CreateUserRequest {
  string name = 1;
  string email = 2;
  string password = 3;
  string role = 4;
}

message CreateUserResponse {
  string public_id = 1;
  string name = 2;
  string email = 3;
  string role = 4;
  bool login_enabled = 5;
  google.protobuf.Timestamp created_at = 6;
  google.protobuf.Timestamp updated_at = 7;
}

message DeleteUserRequest {
  string public_id = 1;
}

message DeleteUserResponse {
  bool success = 1;
}
